@@ -1,4 +1,10 @@
 2014-12-09  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Process.pm (which_process_running): New method to return
+	  the list of pid of the running amanda processes.
+	* perl/Amanda/Cleanup.pm (message 3400002): Include the list of pid
+	  running.
+
+2014-12-09  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Status.pm: Fix status.
 
 2014-12-08  Jean-Louis Martineau <martineau@zmanda.com>
